content/_generated-doc/3.20/config/quarkus-reactive-mssql-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

h|[[quarkus-reactive-mssql-client_section_quarkus-datasource]] [.section-name.section-level0]##link:#quarkus-reactive-mssql-client_section_quarkus-datasource[Datasources]##
h|Type
h|Default

a| [[quarkus-reactive-mssql-client_quarkus-datasource-reactive-mssql-packet-size]] [.property-path]##link:#quarkus-reactive-mssql-client_quarkus-datasource-reactive-mssql-packet-size[`quarkus.datasource.reactive.mssql.packet-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.reactive.mssql.packet-size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".reactive.mssql.packet-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".reactive.mssql.packet-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The desired size (in bytes) for TDS packets.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_MSSQL_PACKET_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_MSSQL_PACKET_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-reactive-mssql-client_quarkus-datasource-reactive-mssql-ssl]] [.property-path]##link:#quarkus-reactive-mssql-client_quarkus-datasource-reactive-mssql-ssl[`quarkus.datasource.reactive.mssql.ssl`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.reactive.mssql.ssl+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".reactive.mssql.ssl`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".reactive.mssql.ssl+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether SSL/TLS is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_MSSQL_SSL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_MSSQL_SSL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`


|===

